@startuml

' Abstract class Sensor
abstract class Sensor {}

' Concrete Sensor classes
class TempSensor {}

class PresSensor {}

class RotSensor {}

class AngSensor {}

' SensorServer class
class SensorServer {}

' sim_control class
class sim_control {}

' SensorStatus class
class SensorStatus {}

' SensorItem class
class SensorItem {
}

' StatusDisplayItem class
class StatusDisplayItem {}

' Display class
class Display {}

' AnalyseServer class
class AnalyseServer {}

' Relationships
Sensor <|-- TempSensor
Sensor <|-- PresSensor
Sensor <|-- RotSensor
Sensor <|-- AngSensor

SensorServer "1" -left- "*" Sensor : manages
SensorServer "1" -- "1" AnalyseServer : communicate
AnalyseServer "1" -- "1" Display: control
sim_control "1" -- "*" Sensor : generate
sim_control "1" -- "1" SensorServer : control_actions
SensorItem "1" -- "*" SensorStatus : contains
AnalyseServer "1" -- "*" SensorItem : manages
Display "1" -- "*" StatusDisplayItem : displays

@enduml
